<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">hello_world</string>
    <string name="app_name">ComputerGraphics</string>
    
    <string name="action_menu_controllers">Controllers</string>
    <string name="action_centered">Centered Controller</string>
    <string name="action_absolute">Absolute Controller</string>
    <string name="action_alternative">Alternative Controller</string>
    <string name="action_different">Different Controller</string>
    
    <string name="action_menu_scenery">Scenery</string>
    <string name="action_scenery00">Scenery 0</string>
    <string name="action_scenery01">Scenary 1</string>
    
    <string name="action_enable_jump">Enable jump</string>
    <string name="action_disable_jump">Disable jump</string>
    
</resources>
